--- a/op_rewards_tracking/optimism_incentives_app_net_flows.ipynb
+++ b/op_rewards_tracking/optimism_incentives_app_net_flows.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "9104321f",
    "metadata": {},
    "outputs": [],
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "ffefb42a",
    "metadata": {},
    "outputs": [],
@@ -44,18 +44,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "1015ba20",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "/Users/michaelsilberling/Documents/GitHub/op-analytics/op_rewards_tracking\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "pwd = os.getcwd()\n",
     "# Verify that our path is right\n",
@@ -88,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "94d6ed51",
    "metadata": {},
    "outputs": [],
@@ -163,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "177ccca5",
    "metadata": {},
    "outputs": [],
@@ -185,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "cff9db78",
    "metadata": {},
    "outputs": [],
@@ -196,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "d3399236",
    "metadata": {},
    "outputs": [],
@@ -252,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "b74f70ef",
    "metadata": {},
    "outputs": [],
@@ -262,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "2d797655",
    "metadata": {},
    "outputs": [],
@@ -282,22 +274,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "8904e656",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "velodrome-0xfc77e39de40e54f820e313039207dc850e4c9e60\n",
-      "curve-0x7bc5728bc2b59b45a58d9a576e2ffc5f0505b35e\n",
-      "curve-0x061b87122ed14b9526a813209c8a59a633257bab\n",
-      "curve-0x7bc5728bc2b59b45a58d9a576e2ffc5f0505b35e\n",
-      "curve-0x061b87122ed14b9526a813209c8a59a633257bab\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# display(df_dfl)\n",
     "dfs_sub = []\n",
@@ -310,15 +290,19 @@
     "        # print(df_source + ' - ' +source_slug + ' - ' + c)\n",
     "        # messari generalized\n",
     "        if df_source == \"messari\":\n",
+    "            print(df_source)\n",
     "            sdf = subg.get_messari_format_pool_tvl(\n",
     "                source_slug, c.lower(), min_ts=min_tsmp\n",
     "            )\n",
     "        # subgraph specific\n",
     "        elif df_source == \"curve\":\n",
+    "            print(df_source)\n",
     "            sdf = subg.get_curve_pool_tvl(c.lower(), min_ts=min_tsmp)\n",
     "        elif df_source == \"velodrome\":\n",
+    "            print(df_source)\n",
     "            sdf = subg.get_velodrome_pool_tvl(c.lower(), min_ts=min_tsmp)\n",
     "        elif df_source == \"hop\":\n",
+    "            print(df_source)\n",
     "            sdf = subg.get_hop_pool_tvl(c, min_ts=min_tsmp)\n",
     "\n",
     "        sdf[\"start_date\"] = program[\"start_date\"]\n",
