--- a/op_rewards_tracking/optimism_incentives_app_net_flows.ipynb
+++ b/op_rewards_tracking/optimism_incentives_app_net_flows.ipynb
@@ -290,19 +290,19 @@
     "        # print(df_source + ' - ' +source_slug + ' - ' + c)\n",
     "        # messari generalized\n",
     "        if df_source == \"messari\":\n",
-    "            print(df_source)\n",
+    "            # print(df_source)\n",
     "            sdf = subg.get_messari_format_pool_tvl(\n",
     "                source_slug, c.lower(), min_ts=min_tsmp\n",
     "            )\n",
     "        # subgraph specific\n",
     "        elif df_source == \"curve\":\n",
-    "            print(df_source)\n",
+    "            # print(df_source)\n",
     "            sdf = subg.get_curve_pool_tvl(c.lower(), min_ts=min_tsmp)\n",
     "        elif df_source == \"velodrome\":\n",
-    "            print(df_source)\n",
+    "            # print(df_source)\n",
     "            sdf = subg.get_velodrome_pool_tvl(c.lower(), min_ts=min_tsmp)\n",
     "        elif df_source == \"hop\":\n",
-    "            print(df_source)\n",
+    "            # print(df_source)\n",
     "            sdf = subg.get_hop_pool_tvl(c, min_ts=min_tsmp)\n",
     "\n",
     "        sdf[\"start_date\"] = program[\"start_date\"]\n",
