--- a/l2_economics/pull_op_txs.ipynb
+++ b/l2_economics/pull_op_txs.ipynb
@@ -31,16 +31,21 @@
    "outputs": [],
    "source": [
     "# Do we re-run data\n",
-    "run_data = 0\n",
+    "run_data = 1\n",
+    "# Does l1_gas_used account for overhead? If not, set it to 0, if so, put it here (i.e. 600)\n",
+    "fixed_overhead = 0\n",
     "\n",
     "configs = [\n",
     "        # ['base_goerli',os.environ.get('BASE_GOERLI_NODE')]\n",
-    "        ['op_goerli',os.environ.get('OP_GOERLI_TEAM_NODE')]\n",
+    "        ['op_goerli_24h_load',os.environ.get('OP_GOERLI_TEAM_NODE')]\n",
     "]\n",
     "\n",
     "max_workers = 8\n",
+    "# Dune L1 Goerli Data https://dune.com/queries/2502137\n",
+    "# First Test 2023-05-23 05:00:00 - 2023-05-23 17:00:00 (12 hours)\n",
+    "# Forward Test 2023-05-23 17:01:00 - 2023-05-24 05:00:00 (12 hours)\n",
     "start_timestamp = pu.convert_text_timestamp_to_int('2023-05-23 05:00:00')\n",
-    "end_timestamp = pu.convert_text_timestamp_to_int('2023-05-23 17:00:00')\n",
+    "end_timestamp = pu.convert_text_timestamp_to_int('2023-05-24 05:00:00')\n",
     "\n",
     "print( pd.to_datetime(start_timestamp, unit='s') )\n",
     "print( pd.to_datetime(end_timestamp, unit='s') )"
@@ -105,7 +110,7 @@
     "        df = opg_df.merge(rec_df,on='hash',how='left')\n",
     "        #REMOVE DSEPOSITS\n",
     "        df = df[df['transaction_type'] != 126]\n",
-    "        df['all_data_gas'] = df['l1_gas_used']\n",
+    "        df['all_data_gas'] = df['l1_gas_used'] - fixed_overhead\n",
     "        df['input_calldata_gas'] = df['input'].apply(evm.count_calldata_gas)\n",
     "        df['effective_l1_gas_used'] = df['l1_fee'] / df['l1_gas_price']\n",
     "        df.to_csv(os.getcwd() + '/downloads/' + folder + '/merged_data.csv', index = False)"
