--- a/concepts/l2_gas_tracker/optimism_etl_stream.ipynb
+++ b/concepts/l2_gas_tracker/optimism_etl_stream.ipynb
@@ -50,7 +50,7 @@
     "last_block = wpy.getLatestBlockNumber(uri)\n",
     "start_block = last_block - 1000\n",
     "\n",
-    "eetl.stream_eth_etl(start_block, output_folder, uri, include, \\\n",
+    "eetl.stream_eth_etl(start_block, uri, include, \\\n",
     "                    pg_user, pg_pw, pg_host, pg_port, pg_db_name)"
    ]
   }
