--- a/value_locked_flows/total_app_net_flows_async.ipynb
+++ b/value_locked_flows/total_app_net_flows_async.ipynb
@@ -466,7 +466,7 @@
     "                titleval_app = \"App Net Flows Change by App -> Chain - Last \" + str(i) + \\\n",
     "                                \" Days - (Apps with > $\" + str(min_tvl/1e6) + \"M TVL Shown)\" + titleval_append\n",
     "        if is_fallback_on_raw_tvl:\n",
-    "                subtitle = \"<br><sup>*For apps where DefiLlama didn't have flows by token, we use their total change in TVL (including token price change)</sup>\"\n",
+    "                subtitle = \"<br><sup>Source: DefiLlama API | *For apps where DefiLlama didn't have flows by token, we use their total change in TVL (including token price change)</sup>\"\n",
     "        else:\n",
     "                subtitle = \"\"\n",
     "\n",
@@ -538,7 +538,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.1"
+   "version": "3.10.11"
   },
   "vscode": {
    "interpreter": {
