--- a/op_chains_tracking/read_op_chain_metadata_airtable.ipynb
+++ b/op_chains_tracking/read_op_chain_metadata_airtable.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -102,7 +102,7 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>Metis</td>\n",
-       "      <td>[Forks]</td>\n",
+       "      <td>[Forks, Legacy Forks]</td>\n",
        "      <td>https://andromeda-explorer.metis.io/</td>\n",
        "      <td>2021-11-03</td>\n",
        "      <td>2021-11-19T00:00:00.000000Z</td>\n",
@@ -162,7 +162,7 @@
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>BOBA</td>\n",
-       "      <td>[Forks]</td>\n",
+       "      <td>[Forks, Legacy Forks]</td>\n",
        "      <td>https://bobascan.com/</td>\n",
        "      <td>2021-09-20</td>\n",
        "      <td>2021-09-20T00:00:00.000000Z</td>\n",
@@ -194,13 +194,13 @@
        "</div>"
       ],
       "text/plain": [
-       "                   Name            Alignment  \\\n",
-       "0                 Metis              [Forks]   \n",
-       "1     OP Mainnet (OVM2)  [Legacy OP Mainnet]   \n",
-       "2                  Aevo               [RAAS]   \n",
-       "3  OP Mainnet (Bedrock)  [Superchain Member]   \n",
-       "4                  BOBA              [Forks]   \n",
-       "5     OP Mainnet (OVM1)  [Legacy OP Mainnet]   \n",
+       "                   Name              Alignment  \\\n",
+       "0                 Metis  [Forks, Legacy Forks]   \n",
+       "1     OP Mainnet (OVM2)    [Legacy OP Mainnet]   \n",
+       "2                  Aevo                 [RAAS]   \n",
+       "3  OP Mainnet (Bedrock)    [Superchain Member]   \n",
+       "4                  BOBA  [Forks, Legacy Forks]   \n",
+       "5     OP Mainnet (OVM1)    [Legacy OP Mainnet]   \n",
        "\n",
        "                         Block Explorer Announcement Date  \\\n",
        "0  https://andromeda-explorer.metis.io/        2021-11-03   \n",
@@ -284,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -310,11 +310,11 @@
      "output_type": "stream",
      "text": [
       "Name,Alignment,Block Explorer,Announcement Date,Mainnet Launch Date,Shutdown Date,L1 Standard Bridge Contract,L1 NFT Bridge Contract,\"L1 BatchInbox \"\"to address\"\"\",\"L1 BatchInbox \"\"from address\"\"\",L1 Output Oracle,\"L1 Output Oracle \"\"from address\"\"\"\n",
-      "Metis,['Forks'],https://andromeda-explorer.metis.io/,2021-11-03,2021-11-19T00:00:00.000000Z,,0x3980c9ed79d2c191a89e02fa3529c60ed6e9c04b,0x5ea23cb3d609f4522a21adcc9ca366e76c23c40f,0x6a1db7d799fba381f2a518ca859ed30cb8e1d41a,0xcdf02971871b7736874e20b8487c019d28090019,0xf209815e595cdf3ed0aaf9665b1772e608ab9380,0x9cb01d516d930ef49591a05b09e0d33e6286689d\n",
+      "Metis,\"['Forks', 'Legacy Forks']\",https://andromeda-explorer.metis.io/,2021-11-03,2021-11-19T00:00:00.000000Z,,0x3980c9ed79d2c191a89e02fa3529c60ed6e9c04b,0x5ea23cb3d609f4522a21adcc9ca366e76c23c40f,0x6a1db7d799fba381f2a518ca859ed30cb8e1d41a,0xcdf02971871b7736874e20b8487c019d28090019,0xf209815e595cdf3ed0aaf9665b1772e608ab9380,0x9cb01d516d930ef49591a05b09e0d33e6286689d\n",
       "OP Mainnet (OVM2),['Legacy OP Mainnet'],https://optimistic.etherscan.io/,,2021-11-11T21:00:00.000000Z,2023-06-06T16:00:00.000000Z,0x99c9fc46f92e8a1c0dec1b1747d010903e884be1,0x5a7749f83b81b301cab5f48eb8516b986daef23d,0x5e4e65926ba27467555eb562121fac00d24e9dd2,0x6887246668a3b87f54deb3b94ba47a6f63f32985,0xbe5dab4a2e9cd0f27300db4ab94bee3a233aeb19,0x473300df21d047806a082244b417f96b32f13a33\n",
       "Aevo,['RAAS'],https://explorer.aevo.xyz/,2022-09-28,2023-04-07T00:00:00.000000Z,,0x4082c9647c098a6493fb499eae63b5ce3259c574,0x2e7d7b188d663f38c2e4ff9c59328458a2d676f0,0x253887577420cb7e7418cd4d50147743c8041b28,0x889e21d7ba3d6dd62e75d4980a4ad1349c61599d,0x909e51211e959339efb14b36f5a50955a8ae3770,0x75acb7ae6c76b3f5ca049431fe2c0797dd002b90\n",
       "OP Mainnet (Bedrock),['Superchain Member'],https://optimistic.etherscan.io/,2023-05-15,2023-06-06T17:00:00.000000Z,,0x99c9fc46f92e8a1c0dec1b1747d010903e884be1,0x5a7749f83b81b301cab5f48eb8516b986daef23d,0xff00000000000000000000000000000000000010,0x7431310e026b69bfc676c0013e12a1a11411eec9,,0x473300df21d047806a082244b417f96b32f13a33\n",
-      "BOBA,['Forks'],https://bobascan.com/,2021-09-20,2021-09-20T00:00:00.000000Z,,0xdc1664458d2f0b6090bea60a8793a4e66c2f1c00,0xb095a3a4f4e6b4fd9825a4932ad6522d4949c8ff,0xfbd2541e316948b259264c02f370ed088e04c3db,0xfa46908b587f9102e81ce6c43b7b41b52881c57f,0xde7355c971a5b733fe2133753abd7e5441d441ec,0x5558c63d5bf229450995adc160c023c9f4d4be80\n",
+      "BOBA,\"['Forks', 'Legacy Forks']\",https://bobascan.com/,2021-09-20,2021-09-20T00:00:00.000000Z,,0xdc1664458d2f0b6090bea60a8793a4e66c2f1c00,0xb095a3a4f4e6b4fd9825a4932ad6522d4949c8ff,0xfbd2541e316948b259264c02f370ed088e04c3db,0xfa46908b587f9102e81ce6c43b7b41b52881c57f,0xde7355c971a5b733fe2133753abd7e5441d441ec,0x5558c63d5bf229450995adc160c023c9f4d4be80\n",
       "OP Mainnet (OVM1),['Legacy OP Mainnet'],https://optimistic.etherscan.io/,,2021-06-23T00:00:00.000000Z,2021-11-11T18:00:00.000000Z,0x99c9fc46f92e8a1c0dec1b1747d010903e884be1,,0x4bf681894abec828b212c906082b444ceb2f6cf6,0x6887246668a3b87f54deb3b94ba47a6f63f32985,0xe969c2724d2448f1d1a6189d3e2aa1f37d5998c1,0x473300df21d047806a082244b417f96b32f13a33\n",
       "\n",
       "Response status code: 200\n",
