move balance tracking to folder

--- a/wallet_balance/Simple balance tracking.ipynb
+++ b/wallet_balance/Simple balance tracking.ipynb
@@ -19,7 +19,7 @@
     "    addresses = f.read().splitlines()\n",
     "\n",
     "# Split the list of addresses into batches of size 20\n",
-    "address_batches = [addresses[i:i+20] for i in range(0, len(addresses), 20)]\n",
+    "address_batches = [addresses[i : i + 20] for i in range(0, len(addresses), 20)]\n",
     "\n",
     "# Set the query parameters\n",
     "# https://docs.optimism.etherscan.io/api-endpoints/accounts#get-ether-balance-for-multiple-addresses-in-a-single-call\n",
@@ -28,7 +28,7 @@
     "    \"action\": \"balancemulti\",\n",
     "    \"tag\": \"latest\",\n",
     "    # Add your key here\n",
-    "    \"apikey\": \"\"\n",
+    "    \"apikey\": \"\",\n",
     "}\n",
     "\n",
     "# Initialize an empty pandas DataFrame to store the data\n",
@@ -38,15 +38,15 @@
     "for i, batch in enumerate(address_batches):\n",
     "    # Add the batch of addresses to the query parameters\n",
     "    payload[\"address\"] = \",\".join(batch)\n",
-    "    \n",
+    "\n",
     "    # Send the HTTP GET request\n",
     "    response = requests.get(url, params=payload)\n",
-    "    \n",
+    "\n",
     "    # Check if the request was successful\n",
     "    if response.status_code == 200:\n",
     "        # Parse the JSON response\n",
     "        data = response.json()\n",
-    "        \n",
+    "\n",
     "        # Check if there are any errors\n",
     "        if data[\"status\"] == \"1\":\n",
     "            # Print the balances of each account in the batch\n",
@@ -56,8 +56,7 @@
     "        else:\n",
     "            print(f\"Error: {data['message']}\")\n",
     "    else:\n",
-    "        print(f\"HTTP error {response.status_code}\")\n",
-    "    "
+    "        print(f\"HTTP error {response.status_code}\")"
    ]
   },
   {
@@ -85,11 +84,9 @@
     "percentage_positive_balance = df[\"has_balance\"].mean() * 100\n",
     "\n",
     "# Print the distribution of addresses with a balance greater than zero\n",
-    "print(f\"Out of {len(df)} addresses, {df['has_balance'].sum()} ({percentage_positive_balance:.2f}%) have a balance greater than 0.\")\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n"
+    "print(\n",
+    "    f\"Out of {len(df)} addresses, {df['has_balance'].sum()} ({percentage_positive_balance:.2f}%) have a balance greater than 0.\"\n",
+    ")"
    ]
   },
   {
