--- a/op_rewards_tracking/pull_notion_data.ipynb
+++ b/op_rewards_tracking/pull_notion_data.ipynb
@@ -60,10 +60,10 @@
    "source": [
     "# remove square brackets and quotation marks from strings\n",
     "for col in [\"Source\", \"App Type\", \"Actions Rewarded\"]:\n",
-    "    df[col] = df[col].str.replace(r\"[\\[\\]']\", \"\", regex=True)\n",
+    "    df[col] = df[col].astype(str).str.replace(r\"[\\[\\]']\", \"\", regex=True)\n",
     "\n",
     "# create fund_type and op_source\n",
-    "df[[\"fund_type\", \"op_source\"]] = df[\"Source\"].str.extract(r\"^(.*?)(?:\\s*-\\s*(.*))?$\")\n",
+    "df[[\"fund_type\", \"op_source\"]] = df[\"Source\"].astype(str).str.extract(r\"^(.*?)(?:\\s*-\\s*(.*))?$\")\n",
     "df[\"op_source\"].fillna(df[\"fund_type\"], inplace=True)\n",
     "df.drop(columns=[\"Source\"], inplace=True)"
    ]
