--- a/contracts_tracking/successful_deployers_to_devrel.ipynb
+++ b/contracts_tracking/successful_deployers_to_devrel.ipynb
@@ -19,7 +19,7 @@
     "import os\n",
     "dotenv.load_dotenv()\n",
     "\n",
-    "rerun_query = 0\n",
+    "rerun_query = 1\n",
     "\n",
     "at_base_id = os.environ[\"AIRTABLE_DEVREL_BASE_ID\"]\n",
     "\n",
@@ -64,7 +64,7 @@
     "datestr = datestr.replace('-', '_')\n",
     "\n",
     "p.mkdir_if_not_exists('uploads')\n",
-    "deployers.to_csv('uploads/deployer_data_' + datestr + '.csv', index=False)"
+    "# deployers.to_csv('uploads/deployer_data_' + datestr + '.csv', index=False)"
    ]
   },
   {
