--- a/contracts_tracking/successful_deployers_to_devrel.ipynb
+++ b/contracts_tracking/successful_deployers_to_devrel.ipynb
@@ -74,9 +74,12 @@
    "outputs": [],
    "source": [
     "# Delete Existing Data\n",
+    "print('deleting existing data')\n",
     "a.delete_all_records(at_base_id,'OP Deployer Data')\n",
     "# Append New Data\n",
-    "a.update_database(at_base_id,'OP Deployer Data', deployers)"
+    "print('appending new data')\n",
+    "a.update_database(at_base_id,'OP Deployer Data', deployers)\n",
+    "print('done')"
    ]
   }
  ],
