push at utils fixes

--- a/contracts_tracking/successful_deployers_to_devrel.ipynb
+++ b/contracts_tracking/successful_deployers_to_devrel.ipynb
@@ -74,10 +74,11 @@
    "outputs": [],
    "source": [
     "# Delete Existing Data\n",
-    "print('deleting existing data')\n",
+    "# print('deleting existing data')S\n",
     "a.delete_all_records(at_base_id,'OP Deployer Data')\n",
     "# Append New Data\n",
     "print('appending new data')\n",
+    "# deployers = deployers[deployers['Team'] == 'Cozy Finance'] #Test specific team\n",
     "a.update_database(at_base_id,'OP Deployer Data', deployers)\n",
     "print('done')"
    ]
