--- a/contracts_tracking/successful_deployers_to_devrel.ipynb
+++ b/contracts_tracking/successful_deployers_to_devrel.ipynb
@@ -19,7 +19,7 @@
     "import os\n",
     "dotenv.load_dotenv()\n",
     "\n",
-    "rerun_query = 1\n",
+    "rerun_query = 0\n",
     "\n",
     "at_base_id = os.environ[\"AIRTABLE_DEVREL_BASE_ID\"]\n",
     "\n",
@@ -35,11 +35,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "if rerun_query == 0:\n",
-    "    deployers = pd.read_csv('csv_outputs/Contract Deployments Usage Threshold - Creator List.csv')\n",
+    "query_id = 2457627\n",
+    "name = \"Contract Deployments Usage Threshold - Creator List\"\n",
+    "\n",
+    "if rerun_query == 1:\n",
+    "    deployers = pd.read_csv('csv_outputs/' + name + '.csv')\n",
     "else:\n",
-    "        # Dune query: https://dune.com/queries/2457627\n",
-    "        deployers = d.get_dune_data(2457627, name = \"Contract Deployments Usage Threshold - Creator List\")"
+    "    # Dune query: https://dune.com/queries/2457627\n",
+    "    deployers = d.get_dune_data(query_id, name = name)"
    ]
   },
   {
@@ -100,7 +103,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.11"
+   "version": "3.10.8"
   },
   "orig_nbformat": 4
  },
