--- a/op_rewards_tracking/optimism_incentives_app_net_flows.ipynb
+++ b/op_rewards_tracking/optimism_incentives_app_net_flows.ipynb
@@ -106,6 +106,7 @@
     "        [\"pickle\", \"pickle finance\"],\n",
     "        [\"stargate\", \"stargate finance\"],\n",
     "        [\"sushi-trident\", \"sushi\"],\n",
+    "        [\"yearn-finance\", \"yearn\"],\n",
     "    ],\n",
     "    columns=[\"slug\", \"app_name\"],\n",
     ")\n",
@@ -154,7 +155,11 @@
    "outputs": [],
    "source": [
     "# Write Protocols to Dune\n",
-    "du.write_dune_api_from_pandas(protocols, \"op_rewards_tvl_flow_protocols_input\",\"Table containing input parameters for OP Rewards TVL Flows\")"
+    "du.write_dune_api_from_pandas(\n",
+    "    protocols,\n",
+    "    \"op_rewards_tvl_flow_protocols_input\",\n",
+    "    \"Table containing input parameters for OP Rewards TVL Flows\",\n",
+    ")"
    ]
   },
   {
@@ -1065,9 +1070,13 @@
     "        os.mkdir(prepend + \"img_outputs/overall/svg\")\n",
     "        os.mkdir(prepend + \"img_outputs/overall/html\")\n",
     "    df_format.to_csv(prepend + \"csv_outputs/\" + html_name + \".csv\", index=False)\n",
-    "    if html_name == 'op_summer_latest_stats':\n",
+    "    if html_name == \"op_summer_latest_stats\":\n",
     "        # Write Output to Dune\n",
-    "        du.write_dune_api_from_pandas(df_format, \"op_summer_latest_stats\",\"Table containing outputs for OP Rewards TVL Flows\")\n",
+    "        du.write_dune_api_from_pandas(\n",
+    "            df_format,\n",
+    "            \"op_summer_latest_stats\",\n",
+    "            \"Table containing outputs for OP Rewards TVL Flows\",\n",
+    "        )\n",
     "\n",
     "    format_cols = [\n",
     "        \"cumul_flows_per_op_at_program_end\",\n",
@@ -1408,7 +1417,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.11"
+   "version": "3.10.4"
   },
   "vscode": {
    "interpreter": {
