update df_info to notion output

--- a/op_rewards_tracking/op_incentive_program_summary.ipynb
+++ b/op_rewards_tracking/op_incentive_program_summary.ipynb
@@ -123,7 +123,7 @@
     }
    ],
    "source": [
-    "df_info = pd.read_csv(\"inputs/\" + \"op_incentive_program_info\" + \".csv\")\n",
+    "df_info = pd.read_csv(\"csv_outputs/\" + \"notion_automation_test\" + \".csv\")\n",
     "\n",
     "# convert to datetime\n",
     "df_info[\"start_date\"] = pd.to_datetime(\n",
