updates to fix cols

--- a/op_rewards_tracking/op_incentive_program_summary.ipynb
+++ b/op_rewards_tracking/op_incentive_program_summary.ipynb
@@ -348,7 +348,7 @@
    "source": [
     "# by app\n",
     "df_combined_app = merge_dfs(\n",
-    "    df_usage=df_usage,\n",
+    "    df_usage = df_usage.loc[:, ~df_usage.columns.isin(['cumul_last_price_net_dollar_flow'])], # we get cumul_last_price_net_dollar_flow from TVl, since the Dune run has previous data\n",
     "    df_tvl_summary_app=df_tvl_summary_app,\n",
     "    df_choice_summary_app=df_choice_summary_app,\n",
     "    df_op_distribution_summary_app=df_op_distribution_summary_app,\n",
@@ -831,7 +831,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.10.11"
   },
   "orig_nbformat": 4
  },
