push alchemy method
Former-commit-id: fc115363bb38bddbbf2939c6072c8ff92b5a56a7

--- a/misc_analysis/get_eth_balance.ipynb
+++ b/misc_analysis/get_eth_balance.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -11,7 +11,7 @@
        "'../helper_functions'"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -30,15 +30,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CTC: 0x6887246668a3b87F54DeB3b94Ba47a6f63F32985: 178.672939973988523327 ETH\n",
-      "SCC: 0x473300df21D047806A082244b417f96b32f13A33: 166.676711339335754599 ETH\n"
+      "0x6887246668a3b87F54DeB3b94Ba47a6f63F32985\n",
+      "CTC From: 0x6887246668a3b87F54DeB3b94Ba47a6f63F32985: 61.14725821205291 ETH\n",
+      "0x473300df21D047806A082244b417f96b32f13A33\n",
+      "SCC From: 0x473300df21D047806A082244b417f96b32f13A33: 39.568072872971584 ETH\n",
+      "0x5E4e65926BA27467555EB562121fac00D24E9dD2\n",
+      "CTC To: 0x5E4e65926BA27467555EB562121fac00D24E9dD2: 0.0 ETH\n",
+      "0xBe5dAb4A2e9cd0F27300dB4aB94BeE3A233AEB19\n",
+      "SCC To: 0xBe5dAb4A2e9cd0F27300dB4aB94BeE3A233AEB19: 0.0 ETH\n"
      ]
     }
    ],
@@ -48,20 +54,25 @@
     "# SCC: https://etherscan.io/address/0xbe5dab4a2e9cd0f27300db4ab94bee3a233aeb19\n",
     "\n",
     "# Get last L1 block of legacy system contracts\n",
-    "block_number = 17422506\n",
+    "# block_number = 17422506 # number\n",
+    "block_number = '0x28ed91dd7fb6ceb8d7e7862e9e6aa74efaede6f30f8d7ef8b2ea5b501af396bf' # hash\n",
+    "\n",
     "\n",
     "# Get legacy batch submitter senders (these carried over to Bedrock)\n",
     "\n",
     "addresses = [\n",
-    "     ['CTC', '0x6887246668a3b87F54DeB3b94Ba47a6f63F32985']\n",
-    "    ,['SCC', '0x473300df21D047806A082244b417f96b32f13A33']\n",
+    "     ['CTC From', '0x6887246668a3b87F54DeB3b94Ba47a6f63F32985']\n",
+    "    ,['SCC From', '0x473300df21D047806A082244b417f96b32f13A33']\n",
+    "    ,['CTC To', '0x5E4e65926BA27467555EB562121fac00D24E9dD2']\n",
+    "    ,['SCC To', '0xBe5dAb4A2e9cd0F27300dB4aB94BeE3A233AEB19']\n",
     "\n",
     "]\n",
     "\n",
     "for ad in addresses:\n",
     "    title = ad[0]\n",
     "    addr = ad[1]\n",
-    "    bal = w.get_eth_balance_by_block(l1_endpoint, block_number, addr)\n",
+    "    print(addr)\n",
+    "    bal = w.alchemy_get_eth_balance_by_block(l1_endpoint, block_number, addr)\n",
     "    print(title + ': ' + addr + ': ' + str(bal) + ' ETH')"
    ]
   }
